--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "dane-whisper-asr-worker"
 version = "0.1.0"
 description = "DANE worker for Whisper"
-authors = ["Dragos Alexandru Balan"]
+authors = ["Dragos Alexandru Balan <d.a.balan@utwente.nl>"]
 license = "MIT"
 readme = "README.md"
 
@@ -23,3 +23,47 @@ types-requests = "^2.28.11.2"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+testpaths = [
+  "tests/unit",
+]
+addopts = [
+  "--cov",
+]
+
+[tool.coverage.run]
+omit = [
+  "tests/*"
+]
+
+[tool.black]
+line-length = 88
+target_version = ['py310']
+include = '\.pyi?$'
+exclude = '''
+
+(
+  /(
+      \.eggs         # exclude a few common directories in the
+    | \.git          # root of the project
+    | build
+    | dist
+    | \.venv
+    | misc
+  )/
+)
+'''
+
+[tool.mypy]
+python_version = "3.10"
+exclude = "misc"
+
+[[tool.mypy.overrides]]
+module = [
+  'dane.*',
+  'mockito',
+  'yaml',
+  'yacs.*',
+]
+ignore_missing_imports = true
