--- a/config/config.yml
+++ b/config/config.yml
@@ -30,9 +30,9 @@ OUTPUT:
     S3_FOLDER_IN_BUCKET: folder  # folder within the bucket
 WHISPER_ASR_SETTINGS:
     WORD_TIMESTAMPS: True
-    DEVICE: cuda  # "cpu" to run on CPU, otherwise "cuda" to run on GPU
+    DEVICE: cpu  # "cpu" to run on CPU, otherwise "cuda" to run on GPU
     VAD: True  # whether to use voice activity detection (VAD) or not
-    MODEL_VERSION: large-v2  # check the README for available options
+    MODEL_VERSION: tiny  # check the README for available options
     BEAM_SIZE: 5
     BEST_OF: 5
     TEMPERATURE: (0.0,0.2,0.4,0.6,0.8,1.0)
