--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ dane = "^0.4.2"
 faster-whisper = "^1.0.1"
 
 [tool.poetry.group.dev.dependencies]
+moto = "^5.0.3"
+boto3 = "^1.34.84"
 pytest = "^7.2.0"
 mockito = "^1.3.3"
 flake8 = "^5.0.4"
@@ -27,6 +29,7 @@ build-backend = "poetry.core.masonry.api"
 [tool.pytest.ini_options]
 testpaths = [
   "tests/unit",
+  "tests/integration",
 ]
 addopts = [
   "--cov",
@@ -66,5 +69,6 @@ module = [
   'yaml',
   'yacs.*',
   'faster_whisper.*',
+  'boto3.*'
 ]
 ignore_missing_imports = true
