--- a/config/config.yml
+++ b/config/config.yml
@@ -14,7 +14,7 @@ ELASTICSEARCH:
     SCHEME: http
     INDEX: dane-index-k8s
 FILE_SYSTEM:
-    BASE_MOUNT: data # data when running locally
+    BASE_MOUNT: data # data when running S3 integration test, /data when running via Docker
     INPUT_DIR: input-files
     OUTPUT_DIR: output-files
 INPUT:
