--- a/config/config.yml
+++ b/config/config.yml
@@ -14,29 +14,30 @@ ELASTICSEARCH:
     SCHEME: http
     INDEX: dane-index-k8s
 FILE_SYSTEM:
-    BASE_MOUNT: /data # data when running S3 integration test, /data when running via Docker
-    MODEL: /model # model when running S3 integration test, /model when running via Docker
+    BASE_MOUNT: data # data when running S3 integration test, /data when running via Docker
+    BASE_MOUNT_MODEL: model
     INPUT_DIR: input-files
     OUTPUT_DIR: output-files
 INPUT:
     TEST_INPUT_PATH: testsource__testcarrier/inputfile.wav
-    TEST_MODEL_PATH: s3_model
+    TEST_MODEL_PATH: s3_model/
+    MODEL_S3_URI: s3://model/model.tar.gz
     S3_ENDPOINT_URL: https://s3-host
     S3_BUCKET: input
     S3_FOLDER_IN_BUCKET: assets  # folder within the bucket
     S3_BUCKET_MODEL: model
     DELETE_ON_COMPLETION: False
 OUTPUT:
-    DELETE_ON_COMPLETION: True
+    DELETE_ON_COMPLETION: False
     TRANSFER_ON_COMPLETION: True
     S3_ENDPOINT_URL: https://s3-host
     S3_BUCKET: output  # bucket reserved for 1 type of output
     S3_FOLDER_IN_BUCKET: folder  # folder within the bucket
 WHISPER_ASR_SETTINGS:
     WORD_TIMESTAMPS: True
-    DEVICE: cpu  # "cpu" to run on CPU, otherwise "cuda" to run on GPU
+    DEVICE: cuda  # "cpu" to run on CPU, otherwise "cuda" to run on GPU
     VAD: True  # whether to use voice activity detection (VAD) or not
-    MODEL_VERSION: tiny  # check the README for available options
+    MODEL_VERSION: large-v2  # check the README for available options
     BEAM_SIZE: 5
     BEST_OF: 5
     TEMPERATURE: (0.0,0.2,0.4,0.6,0.8,1.0)
