--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.10"
 dane = "^0.4.2"
 faster-whisper = "^1.0.1"
 mock = "^5.1.0"
+munch = "^4.0.0"
 
 [tool.poetry.group.dev.dependencies]
 moto = "^5.0.3"
