--- a/.github/workflows/main-branch.yml
+++ b/.github/workflows/main-branch.yml
@@ -13,10 +13,9 @@ jobs:
   test:
     uses: ./.github/workflows/_test.yml
 
-  ### TO BE UNCOMMENTED ONCE DOCKER IS SET UP
-  # deploy:
-  #   uses: ./.github/workflows/_deploy.yml
-  #   permissions:
-  #     contents: read
-  #     packages: write
-  #   needs: [test]
+  deploy:
+    uses: ./.github/workflows/_deploy.yml
+    permissions:
+      contents: read
+      packages: write
+    needs: [test]
