--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,13 @@ black = "^24.3.0"
 mypy = "^0.982"
 types-requests = "^2.28.11.2"
 
+
+[tool.poetry.group.service.dependencies]
+flask = "^3.0.3"
+flask-restx = "^1.3.0"
+
+
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
