--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,12 +23,12 @@ black = "^24.3.0"
 mypy = "^0.982"
 types-requests = "^2.28.11.2"
 
+[tool.poetry.group.service]
+optional = true
 
 [tool.poetry.group.service.dependencies]
 flask = "^3.0.3"
 flask-restx = "^1.3.0"
-
-
 
 [build-system]
 requires = ["poetry-core"]
