--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,21 +1,21 @@
 [tool.poetry]
 name = "dane-whisper-asr-worker"
-version = "0.1.0"
-description = "DANE worker for Whisper"
+version = "0.2.0"
+description = "Whisper worker"
 authors = ["Dragos Alexandru Balan <d.a.balan@utwente.nl>"]
 license = "MIT"
 readme = "README.md"
+package-mode = false
 
 [tool.poetry.dependencies]
-python = "^3.10"
-dane = "^0.4.3"
+python = "^3.11"
 faster-whisper = "^1.0.1"
+validators = "^0.33.0"
 
 [tool.poetry.group.dev.dependencies]
 moto = "^5.0.3"
 boto3 = "^1.34.84"
 pytest = "^7.2.0"
-mockito = "^1.3.3"
 flake8 = "^5.0.4"
 pytest-cov = "^4.0.0"
 black = "^24.3.0"
@@ -42,7 +42,7 @@ omit = [
 
 [tool.black]
 line-length = 88
-target_version = ['py310']
+target_version = ['py311']
 include = '\.pyi?$'
 exclude = '''
 
@@ -59,15 +59,12 @@ exclude = '''
 '''
 
 [tool.mypy]
-python_version = "3.10"
+python_version = "3.11"
 exclude = "misc"
 
 [[tool.mypy.overrides]]
 module = [
-  'dane.*',
-  'mockito',
   'yaml',
-  'yacs.*',
   'faster_whisper.*',
   'boto3.*'
 ]
