--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,9 +12,9 @@ services:
       options:
         max-size: 20m
     restart: no
-    # Uncomment below to use the GPU/CUDA
-    # deploy:
-    #   resources:
-    #     reservations:
-    #       devices: 
-    #       - capabilities: [gpu]
+    # Comment below to use the CPU instead of the GPU/CUDA
+    deploy:
+      resources:
+        reservations:
+          devices: 
+          - capabilities: [gpu]
