changed all kaldi-nl-test refs to whisper-test

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # passed to --input-uri (see main.py)
-INPUT_URI=http://model-hosting.beng.nl/kaldi-nl-test.mp3
+INPUT_URI=http://model-hosting.beng.nl/whisper-test.mp3
 
 # passed to --output-uri (see main.py)
 OUTPUT_URI=s3://x-omg-daan-av/assets/2101608150135908031__NOS_JOURNAAL_-WON01207359/
