--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ faster-whisper = "^1.0.1"
 validators = "^0.33.0"
 boto3 = "^1.35.10"
 flask-restx = "^1.3.0"
+flask-cors = "^5.0.0"
 
 [tool.poetry.group.dev.dependencies]
 moto = "^5.0.13"
@@ -74,6 +75,8 @@ exclude = "misc"
 module = [
   'yaml',
   'faster_whisper.*',
-  'boto3.*'
+  'boto3.*',
+  "flask_restx",
+  "flask_cors"
 ]
 ignore_missing_imports = true
