Add cudnn and cublas dependencies for GPU support
These are faster-whisper dependencies, see
https://github.com/SYSTRAN/faster-whisper/blob/d57c5b40b06e59ec44240d93485a95799548af50/README.md

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ readme = "README.md"
 python = "^3.10"
 dane = "^0.4.3"
 faster-whisper = "^1.0.1"
+nvidia-cudnn-cu12 = "^8"
+nvidia-cublas-cu12 = "^12.6.1.4"
 
 [tool.poetry.group.dev.dependencies]
 moto = "^5.0.13"
