--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ validators = "^0.33.0"
 boto3 = "^1.35.10"
 fastapi = "^0.115.0"
 uvicorn = "^0.30.6"
+tomli = "^2.0.1"
 
 [tool.poetry.group.dev.dependencies]
 moto = "^5.0.13"
