--- a/.github/workflows/_test.yml
+++ b/.github/workflows/_test.yml
@@ -5,4 +5,4 @@ on:
 
 jobs:
   check-project:
-    uses: beeldengeluid/gha-workflows/.github/workflows/check-poetry-project.yml@71d9cba5e50f829007d4ba9391e827ddc3864d0c # v2024.09.02
+    uses: beeldengeluid/gha-workflows/.github/workflows/check-poetry-project.yml@add-tag-strat # v2024.09.02
