--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     uses: ./.github/workflows/_test.yml
 
   build-push-image:
-    uses: beeldengeluid/gha-workflows/.github/workflows/build-push-image.yml@71d9cba5e50f829007d4ba9391e827ddc3864d0c # v2024.09.02
+    uses: beeldengeluid/gha-workflows/.github/workflows/build-push-image.yml@add-tag-strat # v2024.09.02
     secrets: inherit
     needs: [test]
     permissions:
