--- a/.github/workflows/manual-build-push-ghcr.yml
+++ b/.github/workflows/manual-build-push-ghcr.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   build-push-image:
-    uses: beeldengeluid/gha-workflows/.github/workflows/build-push-image.yml@71d9cba5e50f829007d4ba9391e827ddc3864d0c # v2024.09.02
+    uses: beeldengeluid/gha-workflows/.github/workflows/build-push-image.yml@add-tag-strat # v2024.09.02
     secrets: inherit
     permissions:
       contents: read
