--- a/.github/workflows/build-push-image.yml
+++ b/.github/workflows/build-push-image.yml
@@ -1,9 +1,11 @@
 name: Deploy dane-whisper-asr-worker to ghcr
 
 on:
+  push:
+    branches:
+    -  main
   workflow_call:
   workflow_dispatch:
-
 jobs:
   build-push-image:
     uses: beeldengeluid/gha-workflows/.github/workflows/build-push-image.yml@851725b0d6bb2e3e64e48310145d65a26dccbf44 # v2024.09.02
