--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ flake8 = "^7.1.1"
 black = "^24.8.0"
 pytest = "^8.3.3"
 pytest-cov = "^5.0.0"
+pytest-mock = "^3.14.0"
 
 [tool.poetry.group.service]
 optional = true
