experimental batched faster whisper
TODO: test it on local machine with GPU

--- a/.env
+++ b/.env
@@ -22,4 +22,5 @@ W_VAD=y  # whether to use voice activity detection (VAD) or not
 W_MODEL=large-v2  # check the README for available options
 W_BEAM_SIZE=5
 W_BEST_OF=5
+W_BATCH_SIZE=40
 W_TEMPERATURE="(0.0,0.2,0.4,0.6,0.8,1.0)"
