--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,10 @@ services:
       options:
         max-size: 20m
     restart: no
+    # Uncomment below when testing the service locally
+    # ports:
+    #   - "5333:5333"
+    #
     # Comment below to use the CPU instead of the GPU/CUDA
     deploy:
       resources:
