New .env with different S3 information for input and for output

--- a/.env
+++ b/.env
@@ -8,12 +8,20 @@ OUTPUT_URI=s3://x-omg-daan-av/assets/2101608150135908031__NOS_JOURNAAL_-WON01207
 DATA_BASE_DIR=./data
 MODEL_BASE_DIR=./model
 
-# make sure to get a valid endpoint from a CODEOWNER
-S3_ENDPOINT_URL=https://some_url
 
-# your AWS credentials for the S3 bucket in question
-AWS_ACCESS_KEY_ID=your-key-id
-AWS_SECRET_ACCESS_KEY=your-secret-access-key
+
+# S3 location and credentials to get the input (staged asset)
+INPUT_S3_ENDPOINT_URL=https://some_url
+INPUT_S3_BUCKET=staged-assets
+INPUT_ACCESS_KEY_ID=your-key-id
+INPUT_SECRET_ACCESS_KEY=your-secret-access-key
+
+# S3 location and credentials to store the output (transcript and )
+INPUT_S3_ENDPOINT_URL=https://some_url
+INPUT_S3_BUCKET=whisper-transcripts
+INPUT_ACCESS_KEY_ID=your-key-id
+INPUT_SECRET_ACCESS_KEY=your-secret-access-key
+
 
 # Whisper related settings
 W_WORD_TIMESTAMPS=y  # or n
