--- a/.env
+++ b/.env
@@ -10,11 +10,18 @@ INPUT_S3_BUCKET=staged-assets
 INPUT_ACCESS_KEY_ID=your-key-id
 INPUT_SECRET_ACCESS_KEY=your-secret-access-key
 
-# S3 location and credentials to store the output (transcript and )
-INPUT_S3_ENDPOINT_URL=https://some_url
-INPUT_S3_BUCKET=whisper-transcripts
-INPUT_ACCESS_KEY_ID=your-key-id
-INPUT_SECRET_ACCESS_KEY=your-secret-access-key
+# S3 location and credentials to store the output (transcript and provenance)
+OUTPUT_S3_ENDPOINT_URL=https://some_url
+OUTPUT_S3_BUCKET=whisper-transcripts
+OUTPUT_ACCESS_KEY_ID=your-key-id
+OUTPUT_SECRET_ACCESS_KEY=your-secret-access-key
+
+# S3 location and credentials to obtain the model (optional, see README for model options)
+# Remove these lines if you're using a different model option
+MODEL_S3_ENDPOINT_URL=https://some_url
+MODEL_S3_BUCKET=whisper-transcripts
+MODEL_ACCESS_KEY_ID=your-key-id
+MODEL_SECRET_ACCESS_KEY=your-secret-access-key
 
 
 # Whisper related settings
